# Sinapse

./: IMPLEMENTATION_AUDIT.md  README.md  SMOKE_TEST_MATRIX.md
apps/desktop-shell/: README.md
apps/desktop-shell/src/DesktopShell/: App.xaml  App.xaml.cs  DesktopShell.csproj  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
apps/desktop-shell/src/DesktopShell/Models/: README.md
apps/desktop-shell/src/DesktopShell/Services/: DaemonConnectionService.cs  PushToTalkRecorderService.cs  README.md  SpeechPlaybackService.cs
apps/desktop-shell/src/DesktopShell/ViewModels/: ArtifactPanelViewModel.cs  ChatViewModel.cs  MainWindowViewModel.cs  OnboardingViewModel.cs  SettingsViewModel.cs  SidebarViewModel.cs  TaskTimelineViewModel.cs
apps/desktop-shell/src/DesktopShell/Views/: ArtifactPanelView.xaml  ArtifactPanelView.xaml.cs  ChatView.xaml  ChatView.xaml.cs  OnboardingView.xaml  OnboardingView.xaml.cs  SettingsView.xaml  (+5 more)
docs/: RELEASE_READINESS_RC.md  WINDOWS_SMOKE_TEST_CHECKLIST.md  architecture-overview.md
services/agent-daemon/: README.md  pyproject.toml
services/agent-daemon/src/agent_daemon/: __init__.py  browser_operator_runtime.py  contracts_runtime.py  health.py  logging_utils.py  main.py  server.py  speech_runtime.py  windows_operator_runtime.py
services/agent-daemon/src/agent_daemon/services/: __init__.py  crossover.py  executor.py  frd_zma_parser.py  memory.py  model_router.py  planner.py  rew_integration.py  search_adapter.py  secret_store.py  workspace.py  workspace_intake.py
services/agent-daemon/tests/: test_hardening.py
tests/: README.md
